Improve fastRP test to cover properties
Co-Authored-By: Jacob Sznajdman <breakanalysis@gmail.com>